Test/Error/ac/ERROR.FORWARD.DECL.ac
CONST A B;
CONST B A;
